--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
       <div class="card__top"><img src="./assets/images/avatar-jessica.jpeg" alt="User avatar"></div>
 
       <div class="card__header">
-        <div class="card__title">Jessica Randall</div>
+        <div class="card__title">
+          <h1>Jessica Randall</h1>
+        </div>
         <div class="card__description">
-          London, United Kingdom</div>
+          London, United Kingdom
+        </div>
       </div>
 
       <div class="card__bio">"Front-end developer and avid reader."</div>
