reapair font -size

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <div class="card__top"><img src="./assets/images/avatar-jessica.jpeg" alt="User avatar"></div>
 
       <div class="card__header">
-        <div class="card__title">
-          <h1>Jessica Randall</h1>
-        </div>
+        <!-- <div class="card__title"> -->
+        <h1 class="card__title">Jessica Randall</h1>
+        <!-- </div> -->
         <div class="card__description">
           London, United Kingdom
         </div>
