--- a/index.html
+++ b/index.html
@@ -16,23 +16,12 @@
 </head>
 
 <body>
-
-  <main>
+  <main class="container">
     <div class="card">
-
-      <div class="card__top"><img src="./assets/images/avatar-jessica.jpeg" alt="User avatar"></div>
-
-      <div class="card__header">
-        <!-- <div class="card__title"> -->
-        <h1 class="card__title">Jessica Randall</h1>
-        <!-- </div> -->
-        <div class="card__description">
-          London, United Kingdom
-        </div>
-      </div>
-
-      <div class="card__bio">"Front-end developer and avid reader."</div>
-
+      <img class="card__image" src="./assets/images/avatar-jessica.jpeg" alt="">
+      <h2 class="card__title">Jessica Randall</h2>
+      <p class="card__address">London, United Kingdom</p>
+      <p class="card__description">"Front-end developer and avid reader."</p>
       <div class="card__links">
         <a class="button" href="#">GitHub</a>
         <a class="button" href="#">Frontend Mentor</a>
