--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="card">
       <img class="card__image" src="./assets/images/avatar-jessica.jpeg" alt="">
       <h2 class="card__title">Jessica Randall</h2>
-      <p class="card__address">London, United Kingdom</p>
+      <p class="card__location">London, United Kingdom</p>
       <p class="card__description">"Front-end developer and avid reader."</p>
       <div class="card__links">
         <a class="button" href="#">GitHub</a>
